# typez

./: Cargo.toml  README.md  Taskfile.yml
.github/workflows/: rust.yml
src/: main.rs
